--- a/mon-premier-deploiement-php/Dockerfile
+++ b/mon-premier-deploiement-php/Dockerfile
@@ -1,4 +1,13 @@
 FROM php:8.2-cli
+
+# Copier les fichiers de l'application
 COPY . /app
+
+# Définir le répertoire de travail
 WORKDIR /app
-CMD ["php", "-S", "0.0.0.0:8080", "index.php"]
+
+# Exposer le port (Render utilise la variable $PORT)
+EXPOSE $PORT
+
+# Démarrer le serveur PHP avec le port dynamique
+CMD php -S 0.0.0.0:${PORT:-8080} index.php
